Notes Pages completion

--- a/client/src/notesPage/notesPage.html
+++ b/client/src/notesPage/notesPage.html
@@ -25,20 +25,43 @@
   <div class="col-md-5 offset-md-2">
 
     <div class="row">
+
+      <div class="col-md-4 yes"><p class="lecture">Lecture 3</p></div>
+      <div class="col-md-4 justify-content-end"><p>Lecture 3</p></div>
+
     </div>
 
+    <div class="row no">
+
+      <div class="col-md-6"><p>
+        <i class="fas fa-eye"></i>
+        <span10>9</span10>
+        <i class="fas fa-thumbs-up"></i>
+        <span10>6</span10>
+        <i class="fas fa-code-branch"></i>
+        <span11>3</span11></p>
+      </div>
+
+      <div class="col-md-6 justify-content-end"><p>Lecture 3</p></div>
+
+    </div>
 
   </div>
+
+
 </div>
-<div class="row">
-  <div class="col-md-5 offset-md-2">.col-md-4</div>
+
 </div>
-<div class="row">
-  <div class="col-md-5 offset-md-2">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-5 offset-md-2">.col-md-4</div>
-</div>
+
+  <div class="row">
+    <div class="col-md-5 offset-md-2">.col-md-4</div>
+  </div>
+  <div class="row">
+    <div class="col-md-5 offset-md-2">.col-md-4</div>
+  </div>
+  <div class="row">
+    <div class="col-md-5 offset-md-2">.col-md-4</div>
+  </div>
 
 
 
